--- a/vite-chart/src/pages/style.css
+++ b/vite-chart/src/pages/style.css
@@ -11,3 +11,24 @@
   padding: 10px;
 }
 
+#triangle-up {
+  width: 0;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 8px solid red;
+  display: inline-block;
+  margin: 0 20px 0 5px;
+  border-radius: 5px;
+}
+#triangle-down {
+  width: 0;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 8px solid #14ae67;
+  display: inline-block;
+  margin: 0 20px 0 5px;
+  border-radius: 5px;
+}
+
