--- a/vite-chart/src/index.css
+++ b/vite-chart/src/index.css
@@ -69,5 +69,21 @@ button:focus-visible {
   }
 } */
 :root {
-  background-color: #f4f4f4;
+  background-color: #f3f4f4;
 }
+
+/* CDN 服务仅供平台体验和调试使用，平台不承诺服务的稳定性，企业客户需下载字体包自行发布使用并做好备份。 */
+@font-face {
+  font-family: 'iconfont';  /* Project id 3822501 */
+  src: url('//at.alicdn.com/t/c/font_3822501_a8ud6s4umue.woff2?t=1670836523938') format('woff2'),
+       url('//at.alicdn.com/t/c/font_3822501_a8ud6s4umue.woff?t=1670836523938') format('woff'),
+       url('//at.alicdn.com/t/c/font_3822501_a8ud6s4umue.ttf?t=1670836523938') format('truetype');
+}
+
+.iconfont{
+    font-family:"iconfont" !important;
+    color: #147cfc;
+    font-size:60px;font-style:normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.2px;
+    -moz-osx-font-smoothing: grayscale;}
